--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
             <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="/blogs.html" class="nav-link">Blogs</a></li>
             <li class="nav-item"><a href="/about.html" class="nav-link">About</a></li>
-            <li class="nav-item"><a href="/contacts.html" class="nav-link">Contacts</a></li>
+            <li class="nav-item"><a href="/portfolio.html" class="nav-link">Portfolio</a></li>
           </ul>
         </div>
         <div class="links-container">
@@ -29,7 +29,7 @@
             <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="/blogs.html" class="nav-link">Blogs</a></li>
             <li class="nav-item"><a href="/about.html" class="nav-link">About</a></li>
-            <li class="nav-item"><a href="/contacts.html" class="nav-link">Contacts</a></li>
+            <li class="nav-item"><a href="/portfolio.html" class="nav-link">Portfolio</a></li>
           </ul>
         </div>
       </nav>
@@ -60,6 +60,28 @@
     <footer>
       <p>Copyright Ⓒ2022 Web Development Practice,</p>
       <p>Inc. All rights reserved.</p>
+      <div class="icons-container">
+
+
+        <a class="icon-link" href="/">
+          <i class="fa-brands fa-github icon"></i>
+        </a>
+        <a class="icon-link" href="/">
+          <i class="fa-brands fa-discord icon"></i>
+        </a>
+        <a class="icon-link" href="/">
+          <i class="fa-brands fa-facebook icon"></i>
+        </a>
+        <a class="icon-link" href="/">
+          <i class="fa-brands fa-square-instagram icon"></i>
+        </a>
+        <a class="icon-link" href="/">
+          <i class="fa-brands fa-twitter icon"></i>
+        </a>
+        <a class="icon-link" href="/">
+          <i class="fa-brands fa-facebook-messenger icon"></i>
+        </a>
+      </div>
     </footer>
   </div>
   <script src="js/index.js"></script>
