--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
             <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="/blogs.html" class="nav-link">Blogs</a></li>
             <li class="nav-item"><a href="/about.html" class="nav-link">About</a></li>
-            <li class="nav-item"><a href="/contacts.html" class="nav-link">Contacts</a></li>
+            <li class="nav-item"><a href="/portfolio.html" class="nav-link">Portfolio</a></li>
           </ul>
         </div>
         <div class="links-container">
@@ -29,20 +29,51 @@
             <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="/blogs.html" class="nav-link">Blogs</a></li>
             <li class="nav-item"><a href="/about.html" class="nav-link">About</a></li>
-            <li class="nav-item"><a href="/contacts.html" class="nav-link">Contacts</a></li>
+            <li class="nav-item"><a href="/portfolio.html" class="nav-link">Contacts</a></li>
           </ul>
         </div>
       </nav>
     </header>
   
     <div class="content-container">
-      <h1 class="title">Welcome to Blogsite!</h1>
-      <p class="subtitle">Here are my contacts!!</p>
+      <div class="portfolio-container">
+        <h1 class="title">Mico Gee Cuarto</h1>
+        <p class="subtitle"></p>
+        <ul class="info-list">
+          <li><i class="fa-solid fa-envelope"></i> cuartzmico@gmail.com</li>
+          <li><i class="fa-solid fa-phone"></i> 09#########</li>
+          <li><i class="fa-solid fa-house"></i> Ibabao LLC, Cebu</li>
+          <li><i class="fa-solid fa-calendar-days"></i> Month 9th, 2000</li>
+          <li><i class="fa-solid fa-location-dot"></i> Cebu, City</li>
+          <li><i class="fa-solid fa-venus-mars"></i> Male</li>
+          <li><i class="fa-solid fa-flag"></i> Filipino</li>
+        </ul>
+      </div>
     </div>
   
     <footer>
       <p>Copyright Ⓒ2022 Web Development Practice,</p>
       <p>Inc. All rights reserved.</p>
+      <div class="icons-container">
+        <a class="icon-link" href="/">
+          <i class="fa-brands fa-github icon"></i>
+        </a>
+        <a class="icon-link" href="/">
+          <i class="fa-brands fa-discord icon"></i>
+        </a>
+        <a class="icon-link" href="/">
+          <i class="fa-brands fa-facebook icon"></i>
+        </a>
+        <a class="icon-link" href="/">
+          <i class="fa-brands fa-square-instagram icon"></i>
+        </a>
+        <a class="icon-link" href="/">
+          <i class="fa-brands fa-twitter icon"></i>
+        </a>
+        <a class="icon-link" href="/">
+          <i class="fa-brands fa-facebook-messenger icon"></i>
+        </a>
+      </div>
     </footer>
   </div>
   <script src="js/index.js"></script>
