--- a/blogs.html
+++ b/blogs.html
@@ -21,7 +21,7 @@
             <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="/blogs.html" class="nav-link">Blogs</a></li>
             <li class="nav-item"><a href="/about.html" class="nav-link">About</a></li>
-            <li class="nav-item"><a href="/contacts.html" class="nav-link">Contacts</a></li>
+            <li class="nav-item"><a href="/portfolio.html" class="nav-link">Portfolio</a></li>
           </ul>
         </div>
         <div class="links-container">
@@ -29,15 +29,15 @@
             <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="/blogs.html" class="nav-link">Blogs</a></li>
             <li class="nav-item"><a href="/about.html" class="nav-link">About</a></li>
-            <li class="nav-item"><a href="/contacts.html" class="nav-link">Contacts</a></li>
+            <li class="nav-item"><a href="/portfolio.html" class="nav-link">Contacts</a></li>
           </ul>
         </div>
       </nav>
     </header>
   
     <div class="content-container">
-      <h1 class="title">Welcome to Blogsite!</h1>
-      <p class="subtitle">Here's our wonderful blogs for you!!</p>
+      <h1 class="title">Here's our wonderful blogs for you.</h1>
+      <p class="subtitle"></p>
       <div class="blogs-container">
         
       </div>
@@ -46,6 +46,26 @@
     <footer>
       <p>Copyright Ⓒ2022 Web Development Practice,</p>
       <p>Inc. All rights reserved.</p>
+      <div class="icons-container">
+        <a class="icon-link" href="/">
+          <i class="fa-brands fa-github icon"></i>
+        </a>
+        <a class="icon-link" href="/">
+          <i class="fa-brands fa-discord icon"></i>
+        </a>
+        <a class="icon-link" href="/">
+          <i class="fa-brands fa-facebook icon"></i>
+        </a>
+        <a class="icon-link" href="/">
+          <i class="fa-brands fa-square-instagram icon"></i>
+        </a>
+        <a class="icon-link" href="/">
+          <i class="fa-brands fa-twitter icon"></i>
+        </a>
+        <a class="icon-link" href="/">
+          <i class="fa-brands fa-facebook-messenger icon"></i>
+        </a>
+      </div>
     </footer>
   </div>
   <script src="js/index.js"></script>
