--- a/portfolio.html
+++ b/portfolio.html
@@ -37,17 +37,77 @@
   
     <div class="content-container">
       <div class="portfolio-container">
-        <h1 class="title">Mico Gee Cuarto</h1>
-        <p class="subtitle"></p>
-        <ul class="info-list">
-          <li><i class="fa-solid fa-envelope"></i> cuartzmico@gmail.com</li>
-          <li><i class="fa-solid fa-phone"></i> 09#########</li>
-          <li><i class="fa-solid fa-house"></i> Ibabao LLC, Cebu</li>
-          <li><i class="fa-solid fa-calendar-days"></i> Month 9th, 2000</li>
-          <li><i class="fa-solid fa-location-dot"></i> Cebu, City</li>
-          <li><i class="fa-solid fa-venus-mars"></i> Male</li>
-          <li><i class="fa-solid fa-flag"></i> Filipino</li>
-        </ul>
+        <div class="info-div">
+          <h1 class="title">Mico Gee Cuarto</h1>
+          <img src="img/portfolio.jpg" alt="Portfolio">
+          <ul class="list info-list">
+            <li><i class="fa-solid fa-envelope info-icon"></i> cuartzmico@gmail.com</li>
+            <li><i class="fa-solid fa-phone info-icon"></i> 09#########</li>
+            <li><i class="fa-solid fa-house info-icon"></i> Ibabao LLC, Cebu</li>
+            <li><i class="fa-solid fa-calendar-days info-icon"></i> Month 9th, 2000</li>
+            <li><i class="fa-solid fa-location-dot info-icon"></i> Cebu, City</li>
+            <li><i class="fa-solid fa-venus-mars info-icon"></i> Male</li>
+            <li><i class="fa-solid fa-flag info-icon"></i> Filipino</li>
+          </ul>
+        </div>
+        <div class="skill-list">
+          <h3>SKILLS</h3>
+          <ul class="list skill-list">
+            <li>Logical</li>
+            <li>Communication</li>
+            <li>Salestalking</li>
+          </ul>
+          <h3>LANGUAGES</h3>
+          <ul class="list language-list">
+            <li>English</li>
+            <li>Filipino</li>
+            <li>Cebuano</li>
+          </ul>
+          <h3>HOBBIES</h3>
+          <ul class="list hobby-list">
+            <li>Coding {}</li>
+            <li>Playing Games</li>
+            <li>Board Games</li>
+            <li>Music</li>
+          </ul>
+        </div>
+        <div class="background-list">
+          <h3>EDUCATION</h3>
+          <ul class="list education-list">
+            <li>
+              <div>
+                <h4>Primary</h4>
+                <h4>Marigondon Elementary School</h4>
+              </div>
+              <h4>2013-2016</h4>
+            </li>
+            <li>
+              <div>
+                <h4>Secondary</h4>
+                <h4>Marigondon National High School</h4>
+              </div>
+              <h4>2017-2020</h4>
+            </li>
+            <li>
+              <div>
+                <h4>Senior High</h4>
+                <h4>Marigondon Senior High School</h4>
+              </div>
+              <h4>2020-2022</h4>
+            </li>
+          </ul>
+          <ul class="list achievement-list">
+            <h3>ACHIEVEMENTS</h3>
+            <li>MTAP</li>
+            <li>Math Quizer</li>
+            <li>Athlete of the Year</li>
+          </ul>
+          <ul class="list experience-list">
+            <h3>EXPERIENCES</h3>
+            <li>Been buying and selling online to generate profits.</li>
+            <li>Selling online items to foreign people mostly from US and EU.</li>
+          </ul>
+        </div>
       </div>
     </div>
   
