--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
             <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="/blogs.html" class="nav-link">Blogs</a></li>
             <li class="nav-item"><a href="/about.html" class="nav-link">About</a></li>
-            <li class="nav-item"><a href="/portfolio.html" class="nav-link">Contacts</a></li>
+            <li class="nav-item"><a href="/portfolio.html" class="nav-link">Portfolio</a></li>
           </ul>
         </div>
       </nav>
@@ -39,7 +39,7 @@
       <div class="portfolio-container">
         <div class="info-div">
           <h1 class="title">Mico Gee Cuarto</h1>
-          <img src="img/portfolio.jpg" alt="Portfolio">
+          <img src="img/portfolio.jpg" alt="Portfolio" class="portfolio-img">
           <ul class="list info-list">
             <li><i class="fa-solid fa-envelope info-icon"></i> cuartzmico@gmail.com</li>
             <li><i class="fa-solid fa-phone info-icon"></i> 09#########</li>
@@ -50,20 +50,20 @@
             <li><i class="fa-solid fa-flag info-icon"></i> Filipino</li>
           </ul>
         </div>
-        <div class="skill-list">
-          <h3>SKILLS</h3>
+        <div class="skill-div">
+          <h3 class="list-subtitle">SKILLS</h3>
           <ul class="list skill-list">
             <li>Logical</li>
             <li>Communication</li>
-            <li>Salestalking</li>
+            <li>Selling</li>
           </ul>
-          <h3>LANGUAGES</h3>
+          <h3 class="list-subtitle">LANGUAGES</h3>
           <ul class="list language-list">
             <li>English</li>
             <li>Filipino</li>
             <li>Cebuano</li>
           </ul>
-          <h3>HOBBIES</h3>
+          <h3 class="list-subtitle">HOBBIES</h3>
           <ul class="list hobby-list">
             <li>Coding {}</li>
             <li>Playing Games</li>
@@ -71,39 +71,39 @@
             <li>Music</li>
           </ul>
         </div>
-        <div class="background-list">
-          <h3>EDUCATION</h3>
+        <div class="background-div">
+          <h3 class="list-subtitle">EDUCATION</h3>
           <ul class="list education-list">
             <li>
               <div>
                 <h4>Primary</h4>
-                <h4>Marigondon Elementary School</h4>
+                Marigondon Elementary School
               </div>
-              <h4>2013-2016</h4>
+              2013-2016
             </li>
             <li>
               <div>
                 <h4>Secondary</h4>
-                <h4>Marigondon National High School</h4>
+                Marigondon National High School
               </div>
-              <h4>2017-2020</h4>
+              2017-2020
             </li>
             <li>
               <div>
                 <h4>Senior High</h4>
-                <h4>Marigondon Senior High School</h4>
+                Marigondon Senior High School
               </div>
-              <h4>2020-2022</h4>
+              2020-2022
             </li>
           </ul>
+          <h3 class="list-subtitle">ACHIEVEMENTS</h3>
           <ul class="list achievement-list">
-            <h3>ACHIEVEMENTS</h3>
             <li>MTAP</li>
             <li>Math Quizer</li>
             <li>Athlete of the Year</li>
           </ul>
+          <h3 class="list-subtitle">EXPERIENCES</h3>
           <ul class="list experience-list">
-            <h3>EXPERIENCES</h3>
             <li>Been buying and selling online to generate profits.</li>
             <li>Selling online items to foreign people mostly from US and EU.</li>
           </ul>
