--- a/blogs.html
+++ b/blogs.html
@@ -29,7 +29,7 @@
             <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="/blogs.html" class="nav-link">Blogs</a></li>
             <li class="nav-item"><a href="/about.html" class="nav-link">About</a></li>
-            <li class="nav-item"><a href="/portfolio.html" class="nav-link">Contacts</a></li>
+            <li class="nav-item"><a href="/portfolio.html" class="nav-link">Portfolio</a></li>
           </ul>
         </div>
       </nav>
